# src/controllers/usersController.js
@@ -1,5 +1,12 @@
-// controllers/usersController.js
 export const getCurrent = async (req, res) => {
   const { email, subscription } = req.user;
-  res.json({ email, subscription });
+
+  res.status(200).json({
+    status: 200,
+    message: 'Current user loaded',
+    data: {
+      email,
+      subscription,
+    },
+  });
 };
